Split data into features and targets

--- a/RedshiftCalculator.ipynb
+++ b/RedshiftCalculator.ipynb
@@ -8,7 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.tree import DecisionTree"
    ]
   },
   {
@@ -27,6 +28,22 @@
    "source": [
     "data = np.load('sdss_galaxy_colors.npy')\n",
     "print(data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into features and targets\n",
+    "features = np.zeros((data.shape[0], 4))\n",
+    "features[:, 0] = data['u'] - data['g']\n",
+    "features[:, 1] = data['g'] - data['r']\n",
+    "features[:, 2] = data['r'] - data['i']\n",
+    "features[:, 3] = data['i'] - data['z']\n",
+    "\n",
+    "targets = data['redshift']"
    ]
   },
   {
