Calculate accuracy of model

--- a/RedshiftCalculator.ipynb
+++ b/RedshiftCalculator.ipynb
@@ -2,40 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.tree import DecisionTree"
+    "import matplotlib\n",
+    "from matplotlib import pyplot as plt\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "( 19.84132,  19.52656,  19.46946,  19.17955,  19.10763, b'QSO',  0.539301,   6.54362200e-05)\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = np.load('sdss_galaxy_colors.npy')\n",
-    "print(data[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = np.load('sdss_galaxy_colors.npy')\n",
+    "\n",
     "# Split data into features and targets\n",
     "features = np.zeros((data.shape[0], 4))\n",
     "features[:, 0] = data['u'] - data['g']\n",
@@ -45,6 +30,107 @@
     "\n",
     "targets = data['redshift']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Split data into training and testing\n",
+    "split = 2 * features.shape[0] // 3\n",
+    "trainFeatures = features[:split]\n",
+    "testFeatures = features[split:]\n",
+    "\n",
+    "trainTargets = targets[:split]\n",
+    "testTargets = targets[split:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "           min_impurity_split=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create and train regression model\n",
+    "model = DecisionTreeRegressor()\n",
+    "model.fit(trainFeatures, trainTargets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5,1,'Value of residuals')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEICAYAAABRSj9aAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAIABJREFUeJzt3Xl8HWXZN/DfZQFRQECJiIAUEEFe\nF8CIKOKroLKD+vAooMDrxquP4IKKBYSnIGBl8UFlLQVKgUJLobJ0h+50TZd0S5ekTZt0ydI0adrs\nyfX8MXPak5OZc2bOmf38vp9PP03mTGaumTNzzT333HPfoqogIqLkel/YARARkb+Y6ImIEo6Jnogo\n4ZjoiYgSjomeiCjhmOiJiBKOiZ58ISKDRURF5ICA1/sBEXlLRFpE5FWf1zVJRG6w+cyz7ReRkSJy\nb6HLoeIV6ElI8SEiUwAsVNW7MqZfCeApAMepak8owWV3FYCjAXzE7/hU9WI/l0/kFZboyc5IANeJ\niGRMvw7ASxFN8gBwAoD1TuML+o6DKAxM9GTn3wA+DOC81AQRORLAZQBGmb9fKiLLRGS3iNSIyFC7\nhYlItYh8M+33oSLyYtrv54jIPBFpFpFyEfl6lmV9WkRmmvOuFpErzOl3A7gLwA9EZI+I/NTib4eK\nyDgReVFEdgP4fyLyPhEZIiJVIrJTRMaKyIfN+Q82591prm+xiBxtfjZTRH5m/jxIRB4SkUYR2Qjg\nUpfb/6qI7DCrnGaLyP+x2fajRORtM5YmEZkjIjyPKSseIGRJVdsBjAVwfdrk7wNYq6rl5u97zc+P\ngJHYfiki33G7LhE5FsAEAPfCuLj8AcBrIlJiMe+BAN4CMBXARwHcDOAlETlVVf8bwP0Axqjqoar6\njM0qrwQwzoz7JQC/BvAdAP8XwMcB7ALwmDnvDQAOB3A8gI8A+AWAdotl/hzGRfBMAKUwqpDcmATg\nFHOblppxWfk9gFoAJTCqqG4HwH5MKCsmesrmeQD/KSIfMH+/3pwGAFDVmaq6UlX7VHUFgJdhJEu3\nfgRgoqpONJc1DUAZgEss5j0HwKEAhqlql6pOB/A2gGtcrG++qv7bXFc7gP8P4A5VrVXVTgBDAVxl\nVut0w0jwn1TVXlVdoqq7LZb5fQCPqGqNqjYB+KuLeKCqz6pqa9r6Py8ih1vM2g3gGAAnqGq3qs5R\ndlhFOTDRky1VnQugAcCVInISgC8CGJ36XES+JCIzRKRBRFpglHaPymNVJ8C4oDSn/gH4KoyElunj\nAGpUtS9t2mYAx7pYX43F+senrbsCQC+MEvMLAKYAeEVEtonIA+ZdhWVcGTE5Ylb7DDOrjnYDqDY/\nstqXDwKoBDBVRDaKyBCn66HixURPuYyCUZK/DsBUVa1L+2w0gDcBHK+qhwN4EkDmw9uUvQA+mPb7\nx9J+rgHwgqoekfbvEFUdZrGcbQCOz6iX/gSArS62KbMEXAPg4oz1H6yqW81S892qejqAr8Conrl+\nwBKB7TCqd9JjSpdt+6+FUZ30TRjVRIPN6QP2pVnq/72qngTgcgC3iMgF2TaWiImechkFIwH9HGnV\nNqbDADSpaoeInA0jYdlZDuBqETlQRDLrsF8EcLmIXGiWbg8Wka+LyHEWy1kII2neai7r6zAS3it5\nbZ3hSQD3icgJACAiJWYzUojIN0TksyIyCMBuGFUnvRbLGAvg1yJynPnQOrOknW37DwPQCWAnjIvB\n/XaBishlIvJJszXUbjMWq3iI9mGip6xUtRrAPACHwCi9p/svAPeISCuM1i5jsyzqTgAnw3jQeTfS\nqoBUtQZGifZ2GFVFNQD+CIvjU1W7AFwB4GIAjQAeB3C9qq51v3X7/APGtk01t2UBgC+Zn30MxoPb\n3TCqdGbBuDBlehpGFU85jIepr2d8brv9MC6mm2Hclawx12/nFADvANgDYD6Ax1V1poNtpCImfI5D\nRJRsLNETESUcEz0RUcIx0RMRJRwTPRFRwvnSodNRRx2lgwcP9mPRRESJtGTJkkZVHdDthxd8SfSD\nBw9GWVmZH4smIkokEXH8NrVbrLohIko4JnoiooRjoiciSjgmeiKihGOiJyJKOEeJXkSOMIdfWysi\nFSLyZb8DIyIibzhtXvkPAJNV9SoROQj9+9UmIqIIy1miF5EPAfgagGcAo5tYVW32OzAKV3NbFyas\n2B52GETkASdVNyfB6CP8ORFZJiIjROSQzJlE5EYRKRORsoaGBs8DpWD9avRS/Gr0UmxtthoHm4ji\nxEmiPwDAWQCeUNUzYYzuM2CcSlUdrqqlqlpaUuLLW7wUoK27jATf1dOXY04iijonib4WQK2qLjR/\nHwcj8RMRUQzkTPSqugNAjYicak66AMZwZ0REFANOW93cDOAls8XNRgA/9i8kIiLykqNEr6rLAZT6\nHAsREfmAb8bG0PS1dWhu6wo7DCKKCSb6mNm1tws/GVmGG0ctCTsUIooJJvqY6e41mjtu2rk3kPWp\naiDrISL/MNGTJREJOwQi8ggTPRFRwjHRExElHBM9EZHp/okVeK+yMewwPMdET0R5Katuwsx19WGH\n4anhszfihyMW5p4xZpy+GUtE1M9VT84HAFQPuzTkSCgXlugjZltzO9btaA07jKK1vaUdrR3dYYdB\n5Ckm+oj5yrDpuPCR2WGHUbS+/NfpuPSfc8MOg8hTTPQ+mLBiOwYPmYCG1k7Plx3060vF+LrUlqa2\nsEMg8hQTvQ9eWFANANhQ718VjN+vM/F1KaLkYKInosRQVTw+s9KXu+k4Y6InosRYUduCByavw+/G\nLA87lEhhoieixOjpM54q7e3qCTmSaGGiJyJKOCZ6IqKEY6InIko4JnoiCytrW8IOgcgzTPSUVbEO\nMHX5o3w7lpKDid5PPiTJwBIv35iiGCvWAoodJnofCLMkRdgDk9fijeVbww7DFxwB0xq7KY4ZHshU\nqMdnVgEArjzj2JAjoaA4SvQiUg2gFUAvgB5VLfUzKCIi8o6bqptvqOoZTPLFafCQCRj65uqwwyCi\nPLCOnhwbOa867BCIKA9OE70CmCoiS0TkRqsZRORGESkTkbKGhgbvIiQiooI4TfTnqupZAC4G8CsR\n+VrmDKo6XFVLVbW0pKTE0yApTGynRhR3jhK9qm4z/68HMB7A2X4GReFj4x6KMxZP+suZ6EXkEBE5\nLPUzgG8DWOV3YEnAg40oWCygWHPSvPJoAOPFaMB9AIDRqjrZ16hizs+27nzjj4jcypnoVXUjgM8H\nEAu5wBeniMipSDWvHPrmary9YlvYYRBY7USUJJFK9CPnVeOm0cvCDoP64a0DUdxFKtETpVNVKB9K\nEBWMiZ4i68TbJuLut9aEHQZR7DHRUw7hlqjZ7QLlhXeC/TDRkyXWzFMcCZujWWKip8BUNezBvKrG\nsMMgKjoceMRHvHvs74KHZwEAqoddGnIkRMWFJXof+PpmLFu4E5FLTPQxxXFpicgpJvqYYsm+cPMq\nGzF4yATUNLWFHQqRr5joY4Ylee+MKasBACzZvCvkSIj8xURPWfGBMsURD9v+mOjJEtsjUxzxqLXG\nRE9ElHBM9ERECcdE7yO2jIkHfk/JwW/SGhO9D9gyJh74LSUXv9v+mOhjhqVPInKLiT6meNdAZI/F\nof6Y6IkoMVj8scZET1mxZEQUf0z0RUhV0dHdm3UeloyIkoOJ3gdRf2A6av5mnHbnZGxrbg87lEhg\nNw/JNG5JLQYPmYC63R1hhxI6x4leRAaJyDIRedvPgJIkqg9MJ6zcDgDYUuS9NrKbh2Qbt8TotK6q\nYU/IkYTPTYn+NwAq/AqEiIj84SjRi8hxAC4FMMLfcJIl6lU4RFQcnJboHwFwK4A+uxlE5EYRKROR\nsoaGBk+Ci6uoVtkQFQs+d+kvZ6IXkcsA1KvqkmzzqepwVS1V1dKSkhLPAqT+eAAT2eNjF2tOSvTn\nArhCRKoBvALgfBF50deoKKegDuhiuLAUwzZSccuZ6FX1NlU9TlUHA7gawHRV/ZHvkVGoiqFkVASb\nSADf+gPb0ccWS6FE2fFZ2X4HuJlZVWcCmOlLJORIMZS0ichbLNETESUcEz0RUcIx0fuI9ejxwK8p\nefiyYn9M9D5gPXpM8HtKHD6AtcZET0SJxrI9E33seFkd5GRZvAWmuOKd9X5M9DFVyEHs5E95C0yU\nHEz0FlrauzF2cU3YYYSKJXmi5HD1wlSx+OOr5Zi6pg6nf/xD+Myxh4cdTqiKoWSvbB5FCccSvYWG\nPZ0AgM4e216ZKQGK4SIWptaObjw2oxJ9fcFfSHnt7o+Jnoh88Ze31+DBKeswraIusHXyAaw1Jnoi\n8sXezl4AQHcv74zDxkTvI949EoWP1ThM9ESUUKzG2Y+JnrJiM0ui+GOij5mg0i5bpFChWEiIDib6\nmGIaprhgoSF8TPRFiOUsSjpVPoRNx0RfxPiwiooBj3Mm+thiYYXIXnpyZ8meiT52vCyc8AQwcDf4\nI+zjiyX5/ZjofRTVzrJ4/BuYCPyVOvy5n8PHRJ9VfolaEnRkR/RaRTGSnLMhvpjoyVKCrlVEllra\nutHe1Rt2GIHImehF5GARWSQi5SKyWkTuDiKwaGC2o2DMWFePTY17PV3mj0YsxLVPL/B0mUny+Xum\n4sJHZocdRiCcDDzSCeB8Vd0jIgcCmCsik1Q19CPo0ekb0NbVi1svOi3sUALDmpRk+vFziwEA1cMu\n9WyZcysbPVtW3DitctzS1OZvIBGRs0Svhj3mrwea/yKRbx6auh6Pz6yy/Ky7ty/ngActbd2oiekX\nzXsNirqodIEQlTjC5KiOXkQGichyAPUApqnqQot5bhSRMhEpa2ho8DpOV1QVp9wxCUPfWp11vvMf\nnonzHpiRbUneBkbRxK8ZADBizkZMWrnd8+WG9byHXS/s5yjRq2qvqp4B4DgAZ4vIZyzmGa6qpapa\nWlJS4nWceRk1f3PWz3fu7QooEooipoH+7p1QgV++tDTsMFzr61M08VzOylWrG1VtBjATwEW+RBM5\nTAUj36uObfUWFYeHp63DWX+ZhkZzrGcaKOfDWBEpAdCtqs0i8gEA3wTwN98jS4Ak1AiMKavBgk07\nww6DyNbU1caYtCzV23PS6uYYAM+LyCAYdwBjVfVtf8OKN7/uA5Zt2YVtzR0+Ld1ea0ePB8vodjV/\n3e7gt5O8xZftoiNnolfVFQDODCCWnBpaO/HF+97Bg1d9Dv9ZenwAa8zvSJ2zwZ+H0d99fJ4vyw1C\nc5u7RP+l+9/1KRIKXvaiz80vL8P3zjwW3zjtowHFU3xi9WZs6oWSsWU1IUdib92OVuRo1UkBamjt\nxCdvn4ilW3bZzhOl5ndvLN8adgiecbpX3yrfhh+PXFz4+tJWqDbTi1WsEn3w3FfCtLS7K7mSvxZs\n3ImePsUzczcN+CyK3TzMWu/sbnD2+gYMHjIBFdt3+xxR4fzez+nLt/vZiWlr6vKOoX53B77591mo\n3RXNhgtM9AXq7VPbF7Omrq5DVcMey8/c8qMnzCiVZMmdKat3AADKNtvfqZA7Px9VNmBae1cv5lXl\nfsP4taVbUVm/By8syN6kOyyxSvT5JLv61g6s2triQzSGk2+fiKuHW/cG8fKiLbjg4VlZ//6Wscsd\n3a6/sXxbv98L6SHT7Z9GtbvlKFle04yrnpiHzp7i6CTLiSQcNn96bQWufXohtuyMZkndqVgl+hQ3\nb7yd/9AsXPavuXmuydmRuqi6Kc/lA68v3YrfvLI853zZbglVFXM3NObs8sELoxdu8X0dcdLS3o2f\nPb8Yv3xxCco278L6Hd7cwSVJUDVk+d6hVmfpTG59XSsAYE+nw5ZnEb24xTLR55JeknD8BZla2rrR\n0d2Xc76xi2sweMiEAdOdlJZHvrcJGz2q0gGMusUfPbMQz743sB7aa7ePX2n72craFjw5y7rvodD5\ndAK+smgL3qmox/aW5DQHfX1pbdghuFJoVwdff2hmwXetUXzeky4Wib61oxtdPfuT76LqpgEPPbt7\n+zB4yASMmLOxoHV9/p6paQ+47L+9p2bnl9C6e/sw9K01+N4T3jSV7Ojuxe3jVwEIvye+yx+di2GT\n1oYaQyYnJ2Ccqxi6e3IXSuy8V9lo+X7DLWPLCwkpbx3dvTjtzkmYvMr7/naKXSwS/WeHTsUPRyzo\nVyjbuqu93zxtnUbd6D/f3RBgZPnbU+BLSKkSyBMzq3x59TtJo2TZSZUEWzt60N2bf8L0ktvS6T1v\nr8GCjfm9ufzDEQtx0+hlAIDheRZcvLS1uR0d3X14YPK6gpeVXkKP8XXcM7FI9ACwuJqtC9J19yna\nunrQ3s2Hf4W6b2IFbjYTXtic1jOnz5VvogeAynqjCvH+idG6E7Oyu6Mbf3i13LY6VpU9VtqJTaIP\nh/uyQFCHWUNrJ06/a0oo606iyWZzxSBc+/QC3DounOqRYHlbln5qVhXGLanFcxnvRBTBzWfBYpvo\n494GPDP6ju7erA+EvKxKcVsnHbU93drRjb0uH7JnHi/GG8zhbNm8qp0YW2b9wDOJJdLUsdvW1YP5\nVbnvPnJ9K1FO7FE7V1KcdGoWGVF4aDavshGvLsm/VYLdMXranZPx6wtO8Wx5SfbZoVNx4CDBhvsu\nyTmvVeIsr2nGlY+950doOS2J2AtO+bQ2eXJWFY45/GAHy+7/++/HlmPSqh2Yf9v5OObwDwyYP8xj\nudDcEvXzMFaJ3glvrwUDv75rRxiDa33yo4d6uiag8GZtbkv9cS49dvfm/03XZjzID9J/eNTaKv2b\n86MA1N7Viw8cNMjyM7ctq1KxrtthtElv6wr2uZIXR3ncaxDiW3WTud8jkrOifFvpBt+GzU/cE0LK\np++aHHYItuwOTT8OWbeFp6ieN7FN9MEI9kuL6DFCLjw4pfCmgU7E4VB5d219Xn9nlyzzvQONw77y\nW6wSfZRKS4VeuT278hfQW18xCeoiOmdD7g6wik3mcWn3XbgpPf9p3Ao8MTP8tv+Zovr+SeLq6IFo\nX8GjeiBkikucuSRkM3wT6Lni4XcxxhyT4pdfP3n/4iPwXUe16ibSiX7nnk70hrrj8jlyInC0OeT4\n5RwPvoKIHv+JkNq121va0dzWjU8f86FQ4wmLav7JvtDDMwoXmWwinei/cO87juar3dW2f4zR0BNK\nsAGk11s6rcOM+kHptyhvfyGxffmv0wEA1cMu9SiacOQ6g0I/xbOIaoEm0oneqa/+bYZPS47ot0aO\nhXHi7WjpwMcctDO3EtVE4S27h63ZRfoCHfE7+Vg9jE0X9xPCKvyo1u+RO+f8NT4DmwdxyKUStFep\nsHqnff/xYZ1CUWooYiW2iT5qxi9LvewU3pXdrxJPlEtSucQt9rziTVgBIdfmvL7UekQ2u2TrRQEq\n7rs4Xonep53d1mXXb4r9WZcZyu/GhNNJVdwSGeVvT2cP7n5rNToS2mNpvseyXQsxL1qOOV0Cq25i\n4B/vOO/Dft+xk+dFJ1vpouAn/wX+vZ+SekEKcrsem1GJ596rxosRHYDabwk9hAKRM9GLyPEiMkNE\nKkRktYj8JojAcrGtE8vjaLAvIfl3v+bHQetX0on7bWumuCaMXnNM4N7MsYEjfhXNLO362YVB3s0r\n81z5hrrWfqPfRfVUcdLqpgfA71V1qYgcBmCJiExT1TU+x5afkPe00wPNqzD9OsWjnTrc8+tiFfeL\nYJAPEQutSsnZ7FLh+YGbbZ11uzvwrf+ZjWvO/gROLjnE2xV7LGeJXlW3q+pS8+dWABUAjvU7MMtY\nQl7uf720xNcTO+5JIwpUFQ2t+4dWTNoFy5LPB059awdW1Da7+psZ69L6uXH4JeRdR5/fn7lbh8VK\nUuNWl1U3Rf7cdVVHLyKDAZwJYKHFZzeKSJmIlDU0NHgTXZ68a6bY/9uduDK4UYgoP8/Pq8YX73sH\nlfWttvNE/Jx0JMjEcuH/zMYVj7rrv//Hzy0eMI3Nh8PjONGLyKEAXgPwW1Xdnfm5qg5X1VJVLS0p\nKfEyxlgJswTpVf80dmNyxkGqU7HqxraQI0mOXW3dYYcAIP9zK4jLS8Qfkzh7M1ZEDoSR5F9S1df9\nDSlK/GshY73MbEMJ+rBCC68vrcUtY8txwPsifuS6lL5vg96ynz1fhg8eNAj/vObMgNccLU4LIl49\nN0jWEVwYJ61uBMAzACpU9e/+h2QvSQ/UVIGWiJSU0s1YZ1S79WS27IipKJS03qmow5vl2xzN6yTc\nZHwzA+XbFt3qO/Z6XGSny4tq7ZSTqptzAVwH4HwRWW7+yz1YZwG6e/tyzmPbRMvjWOxEcXiyzJh6\n+xTjltQObI7nklXd6qqtLZhXVXjf65sa9+L8h2aicU9n7pmLQLZvyu6Yi2hu2SfIa63XF3Yni6tv\njf6x66TVzVxVFVX9nKqeYf6b6GdQYxbX+Ll4F5y/GbvvLwIuQqavbuKq7f0+GzW/Gn94tRyjF22x\n/uMCMsRl/5qLa58e8EwewMB23tne5BwxZyM2Nu7FpFX2D7p7HFz4KboyDzOvSs9R0dLejadmbww7\njKwi+WZs+gsI5FxNU/9Br5v2dgEApqza0a9U3tFt7N+tzQMHyfbiMvXs3E37fq5q2IPT7pyM8cus\n+ydxYuXWFg+iiocI1DR5buIKowBScO+UOWYo5AIxa11hLQUbIl6qj2SiB/YnqXR+vdyRWu7AKiN/\nixZuDsyK7fbNBXOZW9nYr8S8vMZoE/23yWvzXmY2+8YGALDWjHvamjpf1pUpNVDNgFJkAV9leU0z\nfjJyseWdRXtA/c5c/q+5tqXGdyqcjc06tqwG97zV/z1HN/ulua0LzW0Dz0vA6Jp53JJay8+2t3RY\nTgeA8x6Yvu/n6XmOMZvrAvH4jEq8sGAz/jRuBc6+z3qMi5+NKstr3XER2f7oL//X3Kyf+5GCt1mU\ncIOU7aSzi232evt68vTjv6bJu+aGudpDW3bBbPONvbRwYLWS0067rnx0Lt646av9ps00S2b7L9oD\ns4BdYnh7hfUD09+NWY6NjXuxuakNJ5ccum96Z08vHnHRT1KmmqY2TFm9o1+Cq9gxoOUygOx3NRXb\nrf8m063jVgyY1t7l/EJ1xj3TbD+77pmF2FC/B9/69NF4/4EDy48z19VbHgHpd6H//eZqx7Gky3Wx\nWly9C4urd+W1bNexRPSJSWQTvVW1wo4sJYMo6O7ty3p7WtWwB0cd+n7Xy82WpAup1rA6QTx/mCX2\n67L6jgHgwkdmO1p2ea39tre5SGApN41eZjl9l1mKfXP5NvzuW59C7a42tHb05Oxc7K3ybTj0YPtT\nrL61E/dOqOg3bdVWZ0k7m9nrG3DeKUft+723TzHIprlsa2cPhrw28ALgVoP5MH1z094BL1fNrWzE\n3ErnD+7zvfsSARZtaur3Oxkim+it3DF+Vc55vH37bv+RsmZb7hPwlUVb8NnjjrD9/IKHZ+HMT9h/\nbqW8phlXPuburcQosvpazh023XKGzTsLv/u4ffxKXPWF4+DFvV/qhaGR86rxhROOxPXPLnL0dze/\nbH3hKFSu/HX9s4vwl+98xvHyXvGw8UNVw56c8+SdyB0s96438rsryKWnT3Hnv1fh5gs+iY8elt/o\nYWGKbB19Lm67+x08ZMK+umkXa9n3023jV+acu9PBQ+RlW/bH4OR439RoP5pOTmlFGqvSjeU0i8W4\nre9O/9xtr85W32s+eSHzgb5Xpbs1DqtJ/ORkf9Tu8qaqrs9l09wwWsxYtqOHehrLuxV1eGHBZvza\np4u332Kb6PPx5nJnL61YKc+4SPjRb0fQ50jjHusHa4UqpJ7yxNv8abnrxdel6m3yCEohx+rVwxc4\nmi+f6+iIOd40SfSiuiuXVMFhwca0qiHf1+qdokr0KXs6e/CWwzcV7di2oy9oqcnQr0S/r45+/8Q5\nGxrwxMwq3+OYsGI7kvuN9D8C7VrDFKKlvRuLqptyz5jGqrWcncznEyndvX2OXpoEgMr63FVFhUgd\nv05fOnzuvWr/gilAUSX6VEnzT6+t6Fd/GuVSmtsqhysenbuva4V8UpzVC1+tHf07OXO3uwYu77pn\nFnnetPOdNXUDqrnS64s31O/Bl+5/x2zvnLzk/4OnMkreHhzTn797quN5U88x7JJ3ulx3fPWtnSi9\n17oZZKbvPh7M86tRMR/VK7aJvpA3UzObKk5cuR3n3P+uRf8u9svy4oFh5i21FxecFbUtmLIm/+6U\nvaiSKq9tdlwi88rPRpXhGw/NtP18U+Ne1O3uxPS1hbXnj2rzuXV1yeqWOdXXey7pzUP9/G6sXuKM\n036NbaK3k/Uhrc1Hu9q6sWN3B3YPOLiMPyj0Td1R86uxbsfAE9HvAyWs5mXLtjRj2KS1ocaQXX57\nXlHYxXhvRvfPbqo5Borkjg1cmJ3v9fTGJ9XHqnmlE3sdtJ92e4p86s+THM9rldj8avJlyzz++rd+\ncbbVTu6IMi+mf/73Snzq6MP6TVu9rX8b95wtdbKuL2dIsZD5zkMhr81PXLk990wRlW8vla7X4/Nq\nbhm73N8VeCi2iT6fk39HS0fWXhLDzicD7yiiKbPfmhcXDHy7NfX9pB5ihVWyL3S9S7cE80ZlNqMt\n3h7OVbWRfixH7UK5Y3cHTv3YYblnjLi1FnfpURXJqptdPrQgAIDJq3eg9N53bEutmSfEhBU7HL9e\n7oWutHrtwUMm5L2cVF2lX8n1jxav0tuJWrvj15e661xt66605zlaWJ89+X4dt2e8w+E2cRfaTbXX\nbnD4wplb6ftlfd2efd1hUEQTvd1LQl0BP+B79r1NuPgfcxzP39DambW73UxOTtiguj1OdbPg1dpS\nm5aqQ821rYWsN1sXEZnrXbipqaC1uX/pbr/7J/VvaeTnV5t+5/r9p+b7t6I8XeSwm4t0YdwVRu1u\nKF+xrbrJJt+kMiPP3vNS/OiTOp9WMG7/ZNqaOvx8VBmeuu4LrtflpefnVVtOz3WC/+Nd+47FfvHi\nkgIi8ja5ZL5056f0O5codvMcp2qPJIhkid6JW8eV5/23W2xKgC8tjHdb2UxOH3qlHpyu3rbb+yL9\nvl9zX33y7b0wipxUvbHdTHZR6OM9mq3G3ItkondSXVHVkH8fMHZDf0VltPt0+VTduCnQr9m2e3+b\n9xDvU6Pa6iaoFiI00G2v5+4B097DAAALoklEQVRfKl1Call8EclEX2j3BEnRtLeroBeYnFwjLvnn\nHDw2w+iOYNb6BuwqqG33fpkl+CjVdc5an18VndebMGNd9jhW1rZY3hkkpZSZS+ZLd7W7vBkv4ocj\nnPXfk01LBAuF2SSyjj4uclVndPX0WTat80u2/t3D1Nnj7ShOLy9y3i2vn0l1ymrrFjx9fYr3vU8w\ne0M8Wo04fYu1UHYjWLn1XuXOgpdhOw5zREWyRE8GhZqtRAq3pakNVz0xD7s7wimJFFIa/sPY7M9j\ngirg+tFjqZWTbvenB0+//HTk4rBDcO31pd5cNOKCJfoIKzSvpCfAF8xOmd4JaOzWTIUkyW1pI4s5\nHWYwyaJUDQYAq7b5cyfo52aOtGnhlVQs0YfJpyM5WyII690Zr1Y7bJI/A5oTWbHrzyZuz0mY6EOU\nK/n5kZM3ZOnlMB9zbOqRB1xsXIxKlU1968Bxg/28dsXsfA5F1O4wnHD6vWbrFTROciZ6EXlWROpF\nJPeArRQJQXalG2RbZ1XFxJX5d8Fc8PpDWzNRYZyU6EcCuMjnOMhCUA///OBH5HatguxKZ4tdjo6U\nadXWln636DH+OnwVld3i6nzJUfcyYs5G236ultc0x+5OL2eiV9XZALxp+hGQqA4O4Va+iSX1d3Gr\nR8zF7bgAczY0FrS++VX9m+G1x/hBsK+trXw63VbU+tdlRK5T494JFbb9XH3nsfdil2E8q6MXkRtF\npExEyhoa4tH+tygFlPxVFT1pL7zE7cQAUgWG8K6WXl6oPzfU+bCAbvnV2WBzzF5KijLPEr2qDlfV\nUlUtLSkp8WqxieZXVUCQSTVbMgqiCdsPnprv2yhDYVfV2K0/KXescRa3m+VEtrpZuDFWNU2+CaKL\n49+NsX6ZSdF/XAEvnjdYbc7CTU2o3VX4+L1u1knR5OYIs+sKPakSmeh37g2/17swZctNSeyky69t\nUoQ3LugFD88MZb2UTE6aV74MYD6AU0WkVkR+6n9YhUliMnMjW2oKq4Qax8oGVeBXo5eGsu5Cemel\n3Ao9D+J2p5ezCwRVvSaIQLz02zHxGLQ3V12rH3XET8ys8n6hNtIvuF5si9255VeddWtI/QKl2FUv\nFHtBhtxLZNVNUuSdwMJ+iuiToLfq8QAvila86q2xWCT0sPcEE32Iknxgqva/ULGlCFF42HtliL4y\nbHrWz/N+YQrG8IAPTlmX3wJCkKtVTrah+ViVkVxbm9vxkUMOwsEHDvJ0ucV2xLBEn1AvLgh3YATj\nVaNiO52CUUx3R+cOm46bRi8LO4zYY6KPsDfzHFJRNXqtApj0KV/vrg1nDIVs4nY8M9FH2N+nrc/7\nb0M/DDOqYoqpFErecl6F6fwYC+Jlwihhok+oKBzHUYiBiJjoEysKt5bpJbE+f/q9MoS/qVRk4laI\nYaJPoOlr69Hja2Z1L1erGlbsUOGcZ9+Y5emCsXllAs1aH3430eW1LTjzE0c6nn9bc7uP0VBxcFNH\n72MYEcQSPfkmvZvinOPjskhPBarYnozxXf3ARE+BYCInv/353xzW2g4TPQWCzSspbpJUvcNET4Fg\niZ6SpNenUc38wkRPgahvzT4YzIi5mwKKhOJo1Pxqj5dYWHH9r5PWehRHMJjoKfYSdIdNNu56Y7Wn\ny3NSLZOk44qJnogo4ZjoiYgsJKk/HCZ6ir2u3mi9BUzJELcHrtkw0VPsLdvSHHYIgdpQtyfsEChm\nmOiJYmb8sq1hhxB7DTlagSUNEz0RUcIx0RMRJRwTPRFRwjlK9CJykYisE5FKERnid1BEROSdnIle\nRAYBeAzAxQBOB3CNiJzudSBdPWwiR0TkBycl+rMBVKrqRlXtAvAKgCu9DuTAQcl5OYGIKEqcJPpj\nAdSk/V5rTutHRG4UkTIRKWtocD/CkYjgW6cf7frviIii4lNHHxp2CJacDCVoVdQe8MqYqg4HMBwA\nSktL83ql7OnrS/P5MyIiysJJib4WwPFpvx8HYJs/4RARkdecJPrFAE4RkRNF5CAAVwN409+wiIjI\nKzmrblS1R0RuAjAFwCAAz6qqt51DExGRb5zU0UNVJwKY6HMsRETkA74ZS0SUcEz0REQJx0RPRJRw\nTPRERAknqt4PlyUiDQA25/nnRwFo9DCcIMQxZoBxBymOMQOMO0inquphfizYUasbt1S1JN+/FZEy\nVY3VK7JxjBlg3EGKY8wA4w6SiJT5tWxW3RARJRwTPRFRwkUx0Q8PO4A8xDFmgHEHKY4xA4w7SL7F\n7MvDWCIiio4oluiJiMhDTPRERAkXmUQftQHIReR4EZkhIhUislpEfmNOHyoiW0VkufnvkrS/uc2M\nf52IXJg2PbBtE5FqEVlpxlZmTvuwiEwTkQ3m/0ea00VE/mnGtUJEzkpbzg3m/BtE5AafYz41bX8u\nF5HdIvLbKO5rEXlWROpFZFXaNM/2r4h8wfz+Ks2/LXiMTZuYHxSRtWZc40XkCHP6YBFpT9vnT+aK\nzW77fYrbs2NCjK7XF5pxjxGjG3a/4h6TFnO1iCw3pwezv1U19H8wuj+uAnASgIMAlAM4PeSYjgFw\nlvnzYQDWwxgcfSiAP1jMf7oZ9/sBnGhuz6Cgtw1ANYCjMqY9AGCI+fMQAH8zf74EwCQYo4idA2Ch\nOf3DADaa/x9p/nxkgMfCDgAnRHFfA/gagLMArPJj/wJYBODL5t9MAnCxTzF/G8AB5s9/S4t5cPp8\nGcuxjM1u+32K27NjAsBYAFebPz8J4Jd+xZ3x+cMA7gpyf0elRB/IAORuqOp2VV1q/twKoAIWY+Wm\nuRLAK6raqaqbAFTC2K4obNuVAJ43f34ewHfSpo9SwwIAR4jIMQAuBDBNVZtUdReAaQAuCijWCwBU\nqWq2N6tD29eqOhtAk0U8Be9f87MPqep8Nc7iUWnL8jRmVZ2qqj3mrwtgjBxnK0dsdtvvedxZuDom\nzNLx+QDGBRm3ud7vA3g52zK83t9RSfSOBiAPi4gMBnAmgIXmpJvMW95n026b7LYh6G1TAFNFZImI\n3GhOO1pVtwPGBQzARyMWc7qr0f8kiPK+TvFq/x5r/pw53W8/gVFiTDlRRJaJyCwROc+cli02u+33\nixfHxEcANKdd7ILa1+cBqFPVDWnTfN/fUUn0jgYgD4OIHArgNQC/VdXdAJ4AcDKAMwBsh3EbBthv\nQ9Dbdq6qngXgYgC/EpGvZZk3KjEDAMw60isAvGpOivq+zsVtnIHHLyJ3AOgB8JI5aTuAT6jqmQBu\nATBaRD4URmw2vDomwtqea9C/IBPI/o5Koo/kAOQiciCMJP+Sqr4OAKpap6q9qtoH4GkYt4aA/TYE\num2qus38vx7AeDO+OvNWMHVLWB+lmNNcDGCpqtYB0d/Xabzav7XoX4Xia/zmQ+DLAPzQrB6AWfWx\n0/x5CYz67U/liM1u+z3n4THRCKMq7YCM6b4x1/U9AGNS04La31FJ9JEbgNysS3sGQIWq/j1t+jFp\ns30XQOrJ+psArhaR94vIiQBOgfEwJbBtE5FDROSw1M8wHritMteXatlxA4A30mK+XgznAGgxbwWn\nAPi2iBxp3hp/25zmt36lnSjv6wye7F/zs1YROcc8/q5PW5anROQiAH8CcIWqtqVNLxGRQebPJ8HY\ntxtzxGa3/X7E7ckxYV7YZgC4Koi4Td8EsFZV91XJBLa/C3m67OU/GC0U1sO4ot0RgXi+CuNWaQWA\n5ea/SwC8AGClOf1NAMek/c0dZvzrkNZaIqhtg9GyoNz8tzq1Lhj1ke8C2GD+/2FzugB4zIxrJYDS\ntGX9BMYDrUoAPw5gf38QwE4Ah6dNi9y+hnEh2g6gG0ap66de7l8ApTCSVxWAR2G+ve5DzJUw6q5T\nx/aT5rz/YR475QCWArg8V2x22+9T3J4dE+b5ssjcF68CeL9fcZvTRwL4Rca8gexvdoFARJRwUam6\nISIinzDRExElHBM9EVHCMdETESUcEz0RUcIx0RMRJRwTPRFRwv0vGdiW26zaCTkAAAAASUVORK5C\nYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1a1307ed30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Generate predictions and create residuals plot\n",
+    "predictions = model.predict(testFeatures)\n",
+    "residuals = abs(predictions - testTargets)\n",
+    "plt.plot(residuals)\n",
+    "plt.title('Value of residuals')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since our plot "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0938938700383\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
